# hyper-python

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml  run.sh
hyper_python/: __init__.py  console.py
hyper_python/ercot/: loader.py  service.py
hyper_python/ercot/model/: fuel_mix.py
hyper_python/helper/: ascii_helper.py  datetime_helper.py
hyper_python/loader/: wikipedia.py
sh/: run-fr.sh  test.sh
src/hyper_python/: __init__.py  console.py  image_to_ascii_converter.py  wikipedia.py
src/hyper_python/ercot/: service.py
src/hyper_python/ercot/model/: fuel_mix.py
src/hyper_python/helper/: ascii_helper.py  datetime_helper.py
src/hyper_python/loader/: wikipedia.py
tests/: __init__.py  conftest.py  datetime_helper_test.py  test_console.py  wikipedia.py
