[tool.poetry]
name = "hyper-python"
version = "0.1.0"
description = "A hyper python project"
authors = ["ryanshores <ryan.shores@me.com>"]
readme = "README.md"
homepage = "https://github.com/ryanshores/hyper-python"
repository = "https://github.com/ryanshores/hyper-python"
keywords = ["hyper"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hyper-python = "hyper_python.console:main"
