[tool.poetry]
name = "hyper-python"
version = "0.1.0"
description = "A hyper python project"
authors = ["ryanshores <ryan.shores@me.com>"]
readme = "README.md"
homepage = "https://github.com/ryanshores/hyper-python"
repository = "https://github.com/ryanshores/hyper-python"
keywords = ["hyper"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = "^2.32.3"
image = "^1.5.33"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
coverage = "^7.6.1"
pytest-mock = "^3.14.0"
black = "^24.8.0"
pylint = "^3.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hyper-python = "hyper_python.console:main"
ercot = "hyper_python.console:ercot_command"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hyper_python"]

[tool.coverge.report]
show_missing = true
fail_under = 100


